--- a/packages/example-webpack4-js/index.html
+++ b/packages/example-webpack4-js/index.html
@@ -5,3 +5,12 @@
     console.log("mylibrary (MyLibrary module): " + MyLibrary);
     console.log("loading MyLibrary.wasmModule ...");
 </script>
+
+<body>
+Demonstration of Emscripten + Webpack + C++: Open Console for more information
+
+<a href="https://igormcoelho.github.io/emscripten-webpack-cpp-example/packages/example-webpack4-js/">Online Example</a>
+
+MIT License - 2021 - Igor Machado Coelho
+
+</body>
