--- a/packages/example-webpack4-js/index.html
+++ b/packages/example-webpack4-js/index.html
@@ -12,6 +12,11 @@ Demonstration of Emscripten + Webpack + C++: Open Console for more information
 <br/>
 <br/>
 
+<a href="https://github.com/igormcoelho/emscripten-webpack-cpp-example">View Repo igormcoelho/emscripten-webpack-cpp-example on GitHub</a>
+
+<br/>
+<br/>
+
 <a href="https://igormcoelho.github.io/emscripten-webpack-cpp-example/packages/example-webpack4-js/">Online Example</a>
 
 <br/>
